сделала слайдер и информционный блок

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <div class="header__block">
         <nav class="menuMain">
             <ul class="menuMain__items">
-                <li class="menuMain__item"> <a href=""> ACTIVITIES </a> </li>
+                <li class="menuMain__item"> <a href="">ACTIVITIES</a> </li>
                 <li class="menuMain__item"> <a href="">TOPS</a> </li>
                 <li class="menuMain__item"> <a href="">BOTTOMS</a> </li>
                 <li class="menuMain__item"> <a href="">ACCESSORIES</a> </li>
@@ -40,18 +40,112 @@
     </header>
 </div>
 <div class="sectionContent">
-<div class="content">
-    <div class="sectionOrder">
-        <div class="order__select">
-
-
+    <div class="content">
+        <div class="sectionOrder">
+            <div class="order__select">
+                <div class="select__filling">
+                    <div class="subheader">COLLECTION</div>
+                    <h2>BIKINI — MYKONOS</h2>
+                    <div class="description">The same top of the line accessories you’re used to but we have
+                        formulated these specifically for your activite lifestyle.
+                    </div>
+                    <div class="wrapAddCart">
+                        <div class="wrapSelect">
+                            <div class="select_block">
+                                <div class="select_field">
+                                    <input type="text" name="select" class="field" readonly>
+                                    <div class="select_arrow"></div>
+                                </div>
+                                <div class="select_fall_out">
+                                    <span data-rel="PICK A COLOR">PICK A COLOR</span>
+                                    <span data-rel="BLACK">BLACK</span>
+                                    <span data-rel="BLACK">BLACK</span>
+                                    <span data-rel="BLACK">BLUE</span>
+                                    <span data-rel="BLACK">BLUE</span>
+                                    <span data-rel="BLACK">BLUE</span>
+                                    <span data-rel="BLACK">BLACK</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="wrapCounter">
+                            <button class="count_minus">-</button>
+                            <input type="text" name="" class="quantity">
+                            <button class="count_plus">+</button>
+                        </div>
+                        <button class="addCard">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+            <div class="slickSlider">
+                <div class="slider-for">
+                    <div class="slickSlide"><img src="img/rectangle_5.png" alt="IMG 001"></div>
+                    <div class="slickSlide"><img src="img/rectangle.png" alt="IMG 002"></div>
+                    <div class="slickSlide"><img src="img/rectangle_2.png" alt="IMG 003"></div>
+                    <div class="slickSlide"><img src="img/rectangle.png" alt="IMG 004"></div>
+                    <div class="slickSlide"><img src="img/rectangle_2.png" alt="IMG 005"></div>
+                </div>
+                <div class="slider-nav">
+                    <button class="slickSlide">IMG 001</button>
+                    <button class="slickSlide">IMG 002</button>
+                    <button class="slickSlide">IMG 003</button>
+                    <button class="slickSlide">IMG 004</button>
+                    <button class="slickSlide">IMG 005</button>
+                </div>
+            </div>
+            <div class="subMenu_wraper">
+                <ul class="subMenu">
+                    <li><a href="">ABOUT THIS ITEM</a></li>
+                    <li><a href="">SIMILAR ITEMS</a></li>
+                    <li><a href="">SCROLL DOWN</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="order__slider">
+        <div class="sectionInform_wrap">
+            <div class="sectionInform">
+                <div class="feature__img"><img src="img/rectangle-4_2.png"
+                                               srcset="img/rectangle-4_2@2x.png 2x,
+                                            img/rectangle-4_2@3x.png 3x"></div>
+                <div class="feature__info">
+                    <div class="subheader">BIKINI INFO</div>
+                    <h2>MYKONOS</h2>
+                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate
+                        esse cillum dolore eu fugiat nulla cillum dolore eu fugiat eu.
+                        Are you interested and want to know more? Click the link below.
+                    </div>
+                </div>
+            </div>
+            <div class="sectionInform">
+                <div class="feature__img"><img src="img/rectangle-6.png"
+                                               srcset="img/rectangle-6@2x.png 2x,
+                                                img/rectangle-6@3x.png 3x"></div>
+                <div class="feature__info">
+                    <div class="subheader">HIGH QUALITY</div>
+                    <h2>MATERIALS USED</h2>
+                    <div class="description">
+                        <ul>
+                            <li>Material Item 001</li>
+                            <li>Material Item 002</li>
+                            <li>Material Item 003</li>
+                            <li>Material Item 004</li>
+                            <li>Material Item 005</li>
+                        </ul>
+                    </div>
+                </div>
 
-
+            </div>
+            <!--<div>THE HIGHEST QALITI</div>-->
+            <div class="separator_wrap">
+            <div class="separator">
+                <div class="line"></div>
+                <div>THEHIGHESTQALITI</div>
+                <div class="line"></div>
+            </div>
+            </div>
         </div>
     </div>
-
 </div>
 </div>
 <!-- @import "footer.html" -->
